Fix material icons on IE, remove default firefox select elements

--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -66,3 +66,11 @@ $gray: rgba(black, 0.7);
   &::-moz-placeholder { @content }
   &:-ms-input-placeholder { @content }
 }
+
+select {
+  -moz-appearance: none;
+}
+
+select::-ms-expand {
+  display: none;
+}
